added delete methods, change incomes/expenses a bit
