# docs/swagger.yaml
@@ -56,10 +56,8 @@ definitions:
       category:
         type: string
       date:
-        description: 'Формат: YYYY-MM-DD'
         type: string
       description:
-        description: Описание
         type: string
     type: object
 host: localhost:8082
@@ -69,6 +67,49 @@ info:
   title: TBank API
   version: "1.0"
 paths:
+  /api/expense/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a specific expense record by ID.
+      parameters:
+      - description: Expense ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success message
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid ID parameter
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Expense not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete Expense
+      tags:
+      - Expenses
   /api/expenses:
     get:
       consumes:
@@ -194,7 +235,46 @@ paths:
       - BearerAuth: []
       summary: Get Incomes within a date range
       tags:
-      - incomes
+      - Incomes
+  /api/income/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a specific income record by its unique ID.
+      parameters:
+      - description: Income ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success message
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid ID
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Income not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete Income by ID
+      tags:
+      - Incomes
   /api/incomes:
     post:
       consumes:
